--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,7 +2,7 @@ version: v1
 managed:
   enabled: true
   go_package_prefix:
-    default: github.com/infinimesh/proto
+    default: github.com/support-pl/infinimesh-proto
     except:
       - buf.build/googleapis/googleapis
       - buf.build/grpc-ecosystem/grpc-gateway
